--- a/deploy/views/index.ejs
+++ b/deploy/views/index.ejs
@@ -18,7 +18,7 @@
 
 <section id="entry"></section>
 
-<sectoin id="about"></sectoin>
+<section id="about"></section>
 
 <%- include partials/footer.ejs %>
 
