--- a/deploy/views/partials/footer.ejs
+++ b/deploy/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
     <div class="inner">
-        <div><a href="">about</a></div>
-        <div><a href="">random</a></div>
-        <div><a href="">add yourself</a></div>
+        <div><a href="#/about">about</a></div>
+        <div><a href="#/random">random</a></div>
+        <div><a href="#/entry">add yourself</a></div>
     </div>
 </footer>
