updated link to prtlng, it was malformed

--- a/deploy/views/index_templates.ejs
+++ b/deploy/views/index_templates.ejs
@@ -60,7 +60,7 @@
 
     <p>RVAMakes was built by you, RVA, in an attempt to collect all the creative powers in Richmond, Virginia.</p>
 
-    <p>This site was inspired by <a href="prtlnd.com">PRTLND</a>. Thanks to <a href="http://welovejeff.com/"">Jeff McDonald</a>, who planted the seed about borrowing the idea.</p>
+    <p>This site was inspired by <a href="http://prtlnd.com">PRTLND</a>. Thanks to <a href="http://welovejeff.com/"">Jeff McDonald</a>, who planted the seed about borrowing the idea.</p>
 
     <p>If you make stuff and you live in Richmond, you should <a href="#/entry">add yourself.</a></p>
 
