added base form handling.

--- a/deploy/views/index_templates.ejs
+++ b/deploy/views/index_templates.ejs
@@ -39,18 +39,19 @@
                 <input type="file" name="img">
             </div>
             <div>
-                <label for="tags"><input type="checkbox" name="tags"> Designer</label>
-                <label for="tags"><input type="checkbox" name="tags"> Developer</label>
-                <label for="tags"><input type="checkbox" name="tags"> Photographer</label>
-                <label for="tags"><input type="checkbox" name="tags"> Illustrator</label>
-                <label for="tags"><input type="checkbox" name="tags"> Musician</label>
-                <label for="tags"><input type="checkbox" name="tags"> Writer</label>
-                <label for="tags"><input type="checkbox" name="tags"> Filmmaker</label>
-                <label for="tags"><input type="checkbox" name="tags"> Crafter</label>
-                <label for="tags"><input type="checkbox" name="tags"> Cook</label>
-                <label for="tags"><input type="checkbox" name="tags"> Mographer</label>
-                <label for="tags"><input type="checkbox" name="tags"> Technologist</label>
+                <label for="tags"><input type="checkbox" name="tags" value="designer"> Designer</label>
+                <label for="tags"><input type="checkbox" name="tags" value="developer"> Developer</label>
+                <label for="tags"><input type="checkbox" name="tags" value="photographer"> Photographer</label>
+                <label for="tags"><input type="checkbox" name="tags" value="illustrator"> Illustrator</label>
+                <label for="tags"><input type="checkbox" name="tags" value="musician"> Musician</label>
+                <label for="tags"><input type="checkbox" name="tags" value="writer"> Writer</label>
+                <label for="tags"><input type="checkbox" name="tags" value="filmmaker"> Filmmaker</label>
+                <label for="tags"><input type="checkbox" name="tags" value="crafter"> Crafter</label>
+                <label for="tags"><input type="checkbox" name="tags" value="cook"> Cook</label>
+                <label for="tags"><input type="checkbox" name="tags" value="mographer"> Mographer</label>
+                <label for="tags"><input type="checkbox" name="tags" value="technologist"> Technologist</label>
             </div>
+            <button class="addCreative">Add Me!</button>
         </form>
     </div>
 </script>
