implemented show and random functionality and rendering

--- a/deploy/views/index_templates.ejs
+++ b/deploy/views/index_templates.ejs
@@ -5,7 +5,7 @@
         <a href="{{url}}" target="_blank">{{name}}</a>
         {{/url}}
         {{^url}}
-        <a href="#/show/{{_id}}" target="_blank">{{name}}</a>
+        <a href="#/show/{{_id}}">{{name}}</a>
         {{/url}}
     </div>
 </script>
