--- a/deploy/public/css/styles.css
+++ b/deploy/public/css/styles.css
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   margin: 0px;
+  font-family: Helvetica Neue, Helvetica, Arial;
 }
 header .inner,
 footer .inner {
@@ -60,7 +61,6 @@ header .inner .options div {
   float: left;
   line-height: 45px;
   font-size: 40px;
-  font-family: "Arial Black", Helvetica Neue, Helvetica, Arial;
   font-weight: bold;
   padding: 10px 20px;
   color: #f1f1f1;
@@ -120,7 +120,6 @@ section {
   color: #fff;
   text-align: center;
   line-height: 200px;
-  font-family: "Helvetica Neue", helvetica, arial, sans-serif;
   text-decoration: none;
   text-transform: capitalize;
 }
@@ -138,7 +137,6 @@ footer {
 }
 footer .inner div {
   float: left;
-  font-family: "Helvetica Neue", helvetica, arial, sans-serif;
   font-size: 15px;
   line-height: 40px;
   margin-right: 40px;
@@ -161,7 +159,6 @@ footer .inner div:first-of-type {
   header .inner .selector .fob {
     line-height: 90px;
     font-size: 90px;
-    font-family: "Arial Black", Helvetica Neue, Helvetica, Arial;
     font-weight: bold;
   }
   header .inner .selector .prefix {
