--- a/deploy/views/index.ejs
+++ b/deploy/views/index.ejs
@@ -22,7 +22,10 @@
 
 <%- include partials/footer.ejs %>
 
-<%- include index_templates.ejs %>
+<%- include template/listItem.ejs %>
+<%- include template/showItem.ejs %>
+<%- include template/about.ejs %>
+<%- include template/entry.ejs %>
 
 <script src="/components/jquery/jquery.js"></script>
 <script src="/components/mustache/mustache.js"></script>
