fixed naming error in index.ejs

--- a/deploy/views/index.ejs
+++ b/deploy/views/index.ejs
@@ -22,10 +22,10 @@
 
 <%- include partials/footer.ejs %>
 
-<%- include template/listItem.ejs %>
-<%- include template/showItem.ejs %>
-<%- include template/about.ejs %>
-<%- include template/entry.ejs %>
+<%- include templates/listItem.ejs %>
+<%- include templates/showItem.ejs %>
+<%- include templates/about.ejs %>
+<%- include templates/entry.ejs %>
 
 <script src="/components/jquery/jquery.js"></script>
 <script src="/components/mustache/mustache.js"></script>
