--- a/deploy/views/index.ejs
+++ b/deploy/views/index.ejs
@@ -6,8 +6,10 @@
     <title>RVA Makes</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-
+    
     <link rel="stylesheet" href="/css/styles.css"/>
+    
+    <script src="/components/modernizr/modernizr.js"></script>
 </head>
 <body>
 <%- include partials/header.ejs %>
