--- a/deploy/views/templates/entry.ejs
+++ b/deploy/views/templates/entry.ejs
@@ -2,7 +2,7 @@
     <p>ADD YOURSELF</p>
 
     <div>
-        <form>
+        <form target="upload" enctype="multipart/form-data"  method="POST" action="/api/creatives" accept-charset="UTF-8">
             <div class="field">
                 <label for="form_name">Name</label>
                 <input type="text" name="name" id="form_name">
@@ -62,4 +62,5 @@
             </div>
         </form>
     </div>
+    <iframe id="upload" style="display:none;"></iframe>
 </script>
