--- a/deploy/public/css/styles.css
+++ b/deploy/public/css/styles.css
@@ -202,6 +202,13 @@ footer .inner div:first-of-type {
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'rvamakes';
+  src: url('fonts/rvamakes.eot');
+  src: url('fonts/rvamakes.eot?#iefix') format('embedded-opentype'), url('fonts/rvamakes.woff') format('woff'), url('fonts/rvamakes.ttf') format('truetype'), url('fonts/rvamakes.svg#rvamakes') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 /* Use the following CSS code if you want to use data attributes for inserting your icons */
 [data-icon]:before {
   font-family: 'rva-icon';
@@ -236,6 +243,27 @@ you can use the generic selector below, but it's slower:
 }
 .rva-RVAlogo_v1:before {
   content: "\72";
+}
+.rva-logo,
+.rva-arrow-down,
+.rva-plus {
+  font-family: 'rvamakes';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+}
+.rva-logo:before {
+  content: "\31";
+}
+.rva-arrow-down:before {
+  content: "\32";
+}
+.rva-plus:before {
+  content: "\2b";
 }
 @media (min-width: 1225px) {
   header .inner,
