--- a/deploy/public/css/styles.css
+++ b/deploy/public/css/styles.css
@@ -197,15 +197,15 @@ footer .inner div:first-of-type {
 }
 @font-face {
   font-family: 'rva-icon';
-  src: url('fonts/rva-icon.eot');
-  src: url('fonts/rva-icon.eot?#iefix') format('embedded-opentype'), url('fonts/rva-icon.woff') format('woff'), url('fonts/rva-icon.ttf') format('truetype'), url('fonts/rva-icon.svg#rva-icon') format('svg');
+  src: url("../fonts/rva-icon.eot");
+  src: url("../fonts/rva-icon.eot?#iefix") format("embedded-opentype"), url("../fonts/rva-icon.woff") format("woff"), url("../fonts/rva-icon.ttf") format("truetype"), url("../fonts/rva-icon.svg#rva-icon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'rvamakes';
-  src: url('fonts/rvamakes.eot');
-  src: url('fonts/rvamakes.eot?#iefix') format('embedded-opentype'), url('fonts/rvamakes.woff') format('woff'), url('fonts/rvamakes.ttf') format('truetype'), url('fonts/rvamakes.svg#rvamakes') format('svg');
+  font-family: "rvamakes";
+  src: url("../fonts/rvamakes.eot");
+  src: url("../fonts/rvamakes.eot?#iefix") format("embedded-opentype"), url("../fonts/rvamakes.woff") format("woff"), url("../fonts/rvamakes.ttf") format("truetype"), url("../fonts/rvamakes.svg#rvamakes") format("svg");
   font-weight: normal;
   font-style: normal;
 }
