--- a/deploy/views/templates/entry.ejs
+++ b/deploy/views/templates/entry.ejs
@@ -62,5 +62,5 @@
             </div>
         </form>
     </div>
-    <iframe id="upload" style="display:none;"></iframe>
+    <iframe id="upload" name="upload" style="display:none;"></iframe>
 </script>
