--- a/deploy/views/partials/footer.ejs
+++ b/deploy/views/partials/footer.ejs
@@ -2,6 +2,6 @@
     <div class="inner">
         <div><a href="#/about">about</a></div>
         <div><a href="#/random">random</a></div>
-        <div><a href="#/entry">add yourself</a></div>
+        <div><a href="#/entry" class="cta"><span class="rva-plus"></span> add yourself</a></div>
     </div>
 </footer>
