update gitignore to ignore aws config file and updated copy for about page

--- a/deploy/views/templates/about.ejs
+++ b/deploy/views/templates/about.ejs
@@ -4,7 +4,7 @@
     <p>RVAMakes was built by you, RVA, in an attempt to collect all the creative powers in Richmond, Virginia.</p>
 
     <p>This site was inspired by <a href="http://prtlnd.com">PRTLND</a>. Thanks to <a href="http://welovejeff.com/"">Jeff
-        McDonald</a>, who planted the seed about borrowing the idea.</p>
+        MacDonald</a>, who planted the seed about borrowing the idea.</p>
 
     <p>If you make stuff and you live in Richmond, you should <a href="#/entry">add yourself.</a></p>
 
@@ -14,9 +14,10 @@
         <strong>Contributors</strong>
     </p>
 
-    <ul>
+    <ul class="contributors">
         <li><a href="http://twitter.com/flatanimals">Fletch Padgett</a></li>
-        <li><a href="http://twitter.com/welovejeff">Jeff McDonald</a></li>
+        <li><a href="http://twitter.com/welovejeff">Jeff MacDonald</a></li>
         <li><a href="http://twitter.com/individual11">David Vogeleer</a></li>
+        <li><a href="http://twitter.com/koolyp">Kevin Power</a></li>
     </ul>
 </script>
