--- a/deploy/views/templates/about.ejs
+++ b/deploy/views/templates/about.ejs
@@ -3,21 +3,22 @@
 
     <p>RVAMakes was built by you, RVA, in an attempt to collect all the creative powers in Richmond, Virginia.</p>
 
-    <p>This site was inspired by <a href="http://prtlnd.com">PRTLND</a>. Thanks to <a href="http://welovejeff.com/"">Jeff
-        MacDonald</a>, who planted the seed about borrowing the idea.</p>
+    <p>This site was inspired by <a href="http://prtlnd.com" target="_blank">PRTLND</a>. Thanks to
+        <a href="http://twitter.com/welovejeff" target="_blank">Jeff
+            MacDonald</a>, who planted the seed about borrowing the idea.</p>
 
     <p>If you make stuff and you live in Richmond, you should <a href="#/entry">add yourself.</a></p>
 
-    <p><a href="http://twitter.com/rvamakes">@RVAMAKES</a></p>
+    <p><a href="http://twitter.com/rvamakes" target="_blank">@RVAMAKES</a></p>
 
     <p>
         <strong>Contributors</strong>
     </p>
 
     <ul class="contributors">
-        <li><a href="http://twitter.com/flatanimals">Fletch Padgett</a></li>
-        <li><a href="http://twitter.com/welovejeff">Jeff MacDonald</a></li>
-        <li><a href="http://twitter.com/individual11">David Vogeleer</a></li>
-        <li><a href="http://twitter.com/koolyp">Kevin Power</a></li>
+        <li><a href="http://twitter.com/flatanimals" target="_blank">Fletch Padgett</a></li>
+        <li><a href="http://twitter.com/welovejeff" target="_blank">Jeff MacDonald</a></li>
+        <li><a href="http://twitter.com/individual11" target="_blank">David Vogeleer</a></li>
+        <li><a href="http://twitter.com/koolyp" target="_blank">Kevin Power</a></li>
     </ul>
 </script>
