--- a/deploy/views/templates/about.ejs
+++ b/deploy/views/templates/about.ejs
@@ -1,5 +1,5 @@
 <script type="text/html" id="tmplAbout">
-    <p>ABOUT</p>
+    <h2>ABOUT</h2>
 
     <p>RVAMakes was built by you, RVA, in an attempt to collect all the creative powers in Richmond, Virginia.</p>
 
@@ -15,9 +15,9 @@
     </p>
 
     <ul class="contributors">
-        <li><a href="http://twitter.com/flatanimals">Fletch Padgett</a></li>
-        <li><a href="http://twitter.com/welovejeff">Jeff MacDonald</a></li>
-        <li><a href="http://twitter.com/individual11">David Vogeleer</a></li>
-        <li><a href="http://twitter.com/koolyp">Kevin Power</a></li>
+        <li class="diamond"><a href="http://twitter.com/flatanimals">Fletch Padgett</a></li>
+        <li class="heart"><a href="http://twitter.com/welovejeff">Jeff MacDonald</a></li>
+        <li class="club"><a href="http://twitter.com/individual11">David Vogeleer</a></li>
+        <li class="spade"><a href="http://twitter.com/koolyp">Kevin Power</a></li>
     </ul>
 </script>
