--- a/deploy/views/templates/about.ejs
+++ b/deploy/views/templates/about.ejs
@@ -16,9 +16,9 @@
     </p>
 
     <ul class="contributors">
-        <li class="diamond"><a href="http://twitter.com/flatanimals">Fletch Padgett</a></li>
-        <li class="heart"><a href="http://twitter.com/welovejeff">Jeff MacDonald</a></li>
-        <li class="club"><a href="http://twitter.com/individual11">David Vogeleer</a></li>
-        <li class="spade"><a href="http://twitter.com/koolyp">Kevin Power</a></li>
+        <li class="diamond"><a href="http://twitter.com/flatanimals" target="_blank">Fletch Padgett</a></li>
+        <li class="heart"><a href="http://twitter.com/welovejeff" target="_blank">Jeff MacDonald</a></li>
+        <li class="club"><a href="http://twitter.com/individual11" target="_blank">David Vogeleer</a></li>
+        <li class="spade"><a href="http://twitter.com/koolyp" target="_blank">Kevin Power</a></li>
     </ul>
 </script>
