--- a/deploy/public/css/styles.css
+++ b/deploy/public/css/styles.css
@@ -12,7 +12,7 @@ a:hover {
   color: #f27d60;
 }
 a:visited {
-  color: #c23410;
+  color: #93270c;
 }
 header .inner,
 footer .inner {
@@ -149,6 +149,33 @@ section {
   height: 40px;
   line-height: 40px;
 }
+#about {
+  padding-left: 30px;
+}
+#about ul.contributors {
+  margin-top: -5px;
+}
+#about ul.contributors li {
+  list-style-type: none;
+  margin-left: -40px;
+  margin-bottom: 5px;
+}
+#about ul.contributors li.spade:before {
+  content: "\2660 \0020";
+  color: #ee5731;
+}
+#about ul.contributors li.club:before {
+  content: "\2663 \0020";
+  color: #ee5731;
+}
+#about ul.contributors li.heart:before {
+  content: "\2665 \0020";
+  color: #ee5731;
+}
+#about ul.contributors li.diamond:before {
+  content: "\2666 \0020";
+  color: #ee5731;
+}
 #entry form div {
   clear: both;
   padding: 10px 0;
@@ -212,30 +239,6 @@ footer .inner div a .rva-plus {
 }
 footer .inner div:first-of-type {
   margin-left: 10px;
-}
-ul.contributors {
-  margin-top: -5px;
-}
-ul.contributors li {
-  list-style-type: none;
-  margin-left: -40px;
-  margin-bottom: 5px;
-}
-ul.contributors li.spade:before {
-  content: "\2660 \0020";
-  color: #ee5731;
-}
-ul.contributors li.club:before {
-  content: "\2663 \0020";
-  color: #ee5731;
-}
-ul.contributors li.heart:before {
-  content: "\2665 \0020";
-  color: #ee5731;
-}
-ul.contributors li.diamond:before {
-  content: "\2666 \0020";
-  color: #ee5731;
 }
 @font-face {
   font-family: 'rva-icon';
@@ -336,7 +339,7 @@ you can use the generic selector below, but it's slower:
     line-height: 45px;
     font-size: 45px;
   }
-  #list {
+  section {
     width: 1225px;
   }
 }
@@ -364,7 +367,7 @@ you can use the generic selector below, but it's slower:
     line-height: 40px;
     font-size: 30px;
   }
-  #list {
+  section {
     width: 735px;
   }
 }
@@ -407,7 +410,7 @@ you can use the generic selector below, but it's slower:
     font-size: 24px;
     padding: 5px 2%;
   }
-  #list {
+  section {
     padding-top: 20px;
     width: 490px;
   }
@@ -423,7 +426,7 @@ you can use the generic selector below, but it's slower:
     margin: -1px;
     font-size: 28px !important;
   }
-  #list {
+  section {
     padding-top: 20px;
     width: 225px;
   }
