set max dimensions on the image in the #show section for issue #22

--- a/deploy/public/css/styles.css
+++ b/deploy/public/css/styles.css
@@ -210,6 +210,10 @@ section {
   font-size: 15px;
   font-weight: bold;
 }
+#show img {
+  max-width: 225px;
+  max-height: 220px;
+}
 footer {
   position: fixed;
   bottom: 0;
