--- a/deploy/views/partials/header.ejs
+++ b/deploy/views/partials/header.ejs
@@ -1,9 +1,9 @@
 <header>
     <div class="inner">
         <div class="selector">
-            <div class="prefix"><span class="rva-RVAlogo_v1" aria-hidden="true"></span></div>
+            <div class="prefix"><span class="rva-logo" aria-hidden="true"></span></div>
             <div class="current">Makes</div>
-            <div class="fob">&darr;</div>
+            <div class="fob"><span class="rva-arrow-down" aria-hidden="true"></span></div>
         </div>
         <div class="options">
             <div data-filter="">Makes</div>
