--- a/deploy/views/templates/entry.ejs
+++ b/deploy/views/templates/entry.ejs
@@ -10,11 +10,11 @@
             </div>
             <div class="field">
                 <label for="form_email">Email</label>
-                <input type="text" name="email" id="form_email">
+                <input type="email" name="email" id="form_email">
             </div>
             <div class="field">
                 <label for="form_url">URL</label>
-                <input type="text" name="url" id="form_url">
+                <input type="url" name="url" id="form_url">
             </div>
             <div class="field">
                 <label for="form_img">Image</label>
