--- a/deploy/views/index.ejs
+++ b/deploy/views/index.ejs
@@ -30,6 +30,7 @@
 <%- include templates/entry.ejs %>
 
 <script src="/components/jquery/jquery.js"></script>
+<script src="/components/jquery/jquery.serializeObject.js"></script>
 <script src="/components/mustache/mustache.js"></script>
 <script src="/components/underscore/underscore.js"></script>
 <script src="/components/backbone/backbone.js"></script>
