--- a/deploy/views/templates/entry.ejs
+++ b/deploy/views/templates/entry.ejs
@@ -24,6 +24,7 @@
                 <label>Tags</label>
             </div>
             <div class="field checkboxes">
+                <fieldset>
                 <label for="form_tags_designer">
                     <input type="checkbox" name="tags" id="form_tags_designer" value="designer"> Designer
                 </label>
@@ -57,6 +58,7 @@
                 <label for="form_tags_technologist">
                     <input type="checkbox" name="tags" id="form_tags_technologist" value="technologist"> Technologist
                 </label>
+                </fieldset>
             </div>
             <div class="ctrls">
                 <button class="addCreative">Add Me!</button>
