--- a/deploy/public/css/styles.css
+++ b/deploy/public/css/styles.css
@@ -40,7 +40,7 @@ header .inner .selector .fob {
   cursor: pointer;
 }
 header .inner .selector .prefix {
-  padding: 0  0 0 10px;
+  padding: 0 0 0 10px;
   float: left;
   line-height: 73px;
 }
@@ -202,6 +202,15 @@ section {
 #entry form {
   margin-left: 10px;
 }
+#entry form #form_errors p {
+  background-color: #ee5731;
+  color: #fff;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 12px 18px;
+  margin: 0 0 3px 0;
+  border-radius: 2px;
+}
 #entry form div {
   clear: both;
   padding: 10px 0;
@@ -224,6 +233,11 @@ section {
   padding: 4px;
   font-size: 15px;
 }
+#entry form div.field input[type="text"].error,
+#entry form div.field input[type="email"].error,
+#entry form div.field input[type="url"].error {
+  border: 1px solid #ee5731;
+}
 #entry form div.checkboxes fieldset {
   border: 1px solid #eee;
   border-radius: 4px;
@@ -233,6 +247,9 @@ section {
 }
 #entry form div.checkboxes fieldset label {
   width: 140px;
+}
+#entry form div.checkboxes fieldset.error {
+  border: 1px solid #ee5731;
 }
 #entry form div.ctrls {
   padding-top: 30px;
