--- a/deploy/views/templates/entry.ejs
+++ b/deploy/views/templates/entry.ejs
@@ -4,6 +4,7 @@
     <div>
         <form target="upload" enctype="multipart/form-data"  method="POST" action="/api/creatives" accept-charset="UTF-8">
             <input type="hidden" name="_csrf" value="<%= csrftoken %>">
+            <div id="form_errors"></div>
             <div class="field">
                 <label for="form_name">Name</label>
                 <input type="text" name="name" id="form_name">
