added hand cursor for add button on form

--- a/deploy/public/css/styles.css
+++ b/deploy/public/css/styles.css
@@ -315,6 +315,8 @@ section {
   font-weight: bold;
   margin: 0 auto;
   border-radius: 2px;
+  cursor: hand;
+  cursor: pointer;
 }
 #show img {
   max-width: 225px;
