better spacing for about section on iPhone

--- a/deploy/public/css/styles.css
+++ b/deploy/public/css/styles.css
@@ -595,6 +595,10 @@ you can use the generic selector below, but it's slower:
     padding: 0;
     margin: 0 0 20px;
   }
+  #about {
+    padding-left: 0;
+    margin-top: -10px;
+  }
   footer {
     position: static;
     height: 41px;
